attempt 498294 at fixing avatar overflow on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -937,20 +937,17 @@ nav #nav-ul-wrapper li:nth-of-type(4) a::before {
   display: grid;
   justify-content: center;
   
-  border-radius: 50%;
   margin-bottom: 33px;
-  overflow: hidden;
   padding: 0 55px;
+  width: 100%;
 }
 
 #about #avatar-overflow-container {
   position: relative;
   
   border-radius: 50%;
-  height: 100%;
   margin: 0 auto;
   overflow: hidden;
-  width: 100%;
 
   transition: all 0.3s ease-in;
 }
@@ -958,6 +955,7 @@ nav #nav-ul-wrapper li:nth-of-type(4) a::before {
 /* rgbCyclone360 */
 #about #avatar-overflow-container::before {
   border: 2px solid red;
+  
   position: absolute;
   inset: 0;
 
